SOSized pipeline, adhoc for chicago data

--- a/WIP/pipeline_prototype/Fusion.compute_weights_testing.ipynb
+++ b/WIP/pipeline_prototype/Fusion.compute_weights_testing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,17 +65,30 @@
     "\t\t  \n",
     ")\n",
     "\n",
-    "opt = parse_args(OptionParser(option_list=option_list))\n",
-    "models = unique( c(unlist(strsplit(opt$models,',')),\"top1\") )\n",
-    "M = length(models)\n",
-    "\n",
-    "if ( opt$verbose == 2 ) {\n",
-    "  SYS_PRINT = F\n",
-    "} else {\n",
-    "  SYS_PRINT = T\n",
-    "}\n",
-    "\n"
+    "#opt = parse_args(OptionParser(option_list=option_list))\n",
+    "#models = unique( c(unlist(strsplit(opt$models,',')),\"top1\") )\n",
+    "#M = length(models)\n",
+    "#\n",
+    "#if ( opt$verbose == 2 ) {\n",
+    "#  SYS_PRINT = F\n",
+    "#} else {\n",
+    "#  SYS_PRINT = T\n",
+    "#}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For testing, manually defined opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -86,14 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- PREDICTION MODELS\n",
     "\n",
     "# BSLMM\n",
+    "\n",
     "weights.bslmm = function( input , bv_type , snp , out=NA ) {\n",
+    "    #If out is empty then named the out as $imput.bslmm, input is cv.file, which is the file in tmp.cv, created by \n",
     "\tif ( is.na(out) ) out = paste(input,\".BSLMM\",sep='')\n",
     "\n",
     "\targ = paste( opt$PATH_gemma , \" -miss 1 -maf 0 -r2 1 -rpace 1000 -wpace 1000 -bfile \" , input , \" -bslmm \" , bv_type , \" -o \" , out , sep='' )\n",
@@ -284,6 +299,7 @@
     "if ( !is.na(opt$covar) ) {\n",
     "arg = paste( opt$PATH_gcta ,\" --grm \",opt$tmp,\" --pheno \",raw.pheno.file,\" --qcovar \",opt$covar,\" --out \",opt$tmp,\" --reml --reml-no-constrain --reml-lrt 1\",sep='')\n",
     "} else {\n",
+    "##heritability is estimated by the function gcta\n",
     "arg = paste( opt$PATH_gcta ,\" --grm \",opt$tmp,\" --pheno \",pheno.file,\" --out \",opt$tmp,\" --reml --reml-no-constrain --reml-lrt 1\",sep='')\n",
     "}\n",
     "system(arg , ignore.stdout=SYS_PRINT,ignore.stderr=SYS_PRINT)\n",
@@ -302,7 +318,7 @@
     "if ( opt$verbose >= 1 ) cat(\"Heritability (se):\",hsq,\"LRT P-value:\",hsq.pv,'\\n')\n",
     "if ( opt$save_hsq ) cat( opt$out , hsq , hsq.pv , '\\n' , file=paste(opt$out,\".hsq\",sep='') )\n",
     "\n",
-    "# 4. stop if insufficient (Stop at here for most genes, ~60% out of 1000 genes)\n",
+    "# 4. stop if insufficient (Stop at here for most genes, ~60% out of 100 genes)\n",
     "if ( hsq[1] < 0 || hsq.pv > opt$hsq_p ) {\n",
     "\tcat(opt$tmp,\" : heritability \",hsq[1],\"; LRT P-value \",hsq.pv,\" : skipping gene\\n\",sep='',file=stderr())\n",
     "\tcleanup()\n",
@@ -386,6 +402,7 @@
     "\tcv.train[,3] = scale(cv.train[,3])\n",
     "\t\n",
     "\t# hide current fold\n",
+    "    ### cv.file has no problem cuz the other two method can work\n",
     "\tcv.file = paste(opt$tmp,\".cv\",sep='')\n",
     "\twrite.table( cv.train , quote=F , row.names=F , col.names=F , file=paste(cv.file,\".keep\",sep=''))\t\n",
     "\targ = paste( opt$PATH_plink ,\" --allow-no-sex --bfile \",opt$tmp,\" --keep \",cv.file,\".keep --out \",cv.file,\" --make-bed\",sep='')\n",
