Organized pipeline with sumstat structure

--- a/WIP/pipeline_prototype/pipline_for_one-Test.ipynb
+++ b/WIP/pipeline_prototype/pipline_for_one-Test.ipynb
@@ -50,8 +50,8 @@
     "# FILL IN THESE PATHS\n",
     "# For mac user, the mac version of GCTA shall be downloaded saperately, the one came with the Fusion package will not work.\n",
     "GCTA=\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/install/fusion_twas-master/gcta_1.93.2beta_mac/gcta64\"\n",
-    "PLINK=\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/plink_mac_20200616/plink\"\n",
-    "GEMMA=\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/install/fusion_twas-master/GEMMA\"\n",
+    "PLINK=\"\"\n",
+    "GEMMA=`which gemma`\n",
     "\n",
     "# Required the customized fusion.compute_weight.mod.R script, other wise will not work\n",
     "Rscp=\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/install/fusion_twas-master/FUSION.compute_weights.mod.R\"\n",
