control mechanism for association test

--- a/Workflow/SOS_weight_cpt_template.ipynb
+++ b/Workflow/SOS_weight_cpt_template.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "kernel": "SoS"
    },
@@ -402,6 +402,7 @@
     "[STEP_4]\n",
     "import os\n",
     "input: group_by = 1\n",
+    "\n",
     "\n",
     "bash: expand= \"$[ ]\", active = (_index == 0)\n",
     "    cd $[wd]\n",
@@ -418,31 +419,31 @@
     "\n",
     "bash: expand= \"$[ ]\", active = (os.path.getsize(f'{_input[0]}') == 0)\n",
     "    cd $[wd]\n",
-    "    rm $[_input[0]]"
+    "    rm $[_input[0]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "kernel": "SoS"
    },
    "outputs": [],
    "source": [
     "#Create diretory for association test\n",
-    "#[STEP_5]\n",
-    "input: sumstat_file\n",
+    "[STEP_5]\n",
+    "from pathlib import Path\n",
+    "pos = list(set([tuple(x.strip().split()) for x in open(f'{wd}/WEIGHTS/{Path(gene_exp_file).stem}.pos').readlines()[1:] if x.strip()]))\n",
+    "chrom_list = [int(item[2]) for item in pos]\n",
+    "chrom_list\n",
     "\n",
-    "output: f'{wd}/result'\n",
+    "input: sumstat_file,for_each = \"chrom_list\"\n",
     "\n",
     "bash: expand= \"$[ ]\"\n",
-    "    Rscript $Rscr2 \\\n",
-    "    --sumstats $[_sumstat_file] \\\n",
-    "    --weights $[wd]/WEIGHTS/$[gene_exp_file:bn].pos \\\n",
-    "    --weights_dir $[wd]/WEIGHTS/ \\\n",
-    "    --ref_ld_chr $[genotype_file_directory]/$[genotype_prefix] \\\n",
-    "    --chr chrom_list \\\n",
-    "    --out "
+    "    echo $[_chrom_list]\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -461,13 +462,59 @@
      ]
     }
    ],
+   "source": [
+    "    #Rscript $Rscr2 \\\n",
+    "    #--sumstats $[_sumstat_file] \\\n",
+    "    #--weights $[wd]/WEIGHTS/$[gene_exp_file:bn].pos \\\n",
+    "    #--weights_dir $[wd]/WEIGHTS/ \\\n",
+    "    #--ref_ld_chr $[genotype_file_directory]/$[genotype_prefix] \\\n",
+    "    #--chr $[_chrom_list] \\\n",
+    "    #--out [_output]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GD462.hsq_succ.test'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wd = '/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/test/'\n",
+    "gene_exp_file = '/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/test/GD462.hsq_succ.test.txt'\n",
+    "pos = list(set([tuple(x.strip().split()) for x in open(\"/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/test/Working/WEIGHTS/GD462.hsq_succ.test.pos\").readlines()[1:] if x.strip()]))\n",
+    "chrm_list = [int(item[2]) for item in pos]\n",
+    "chrm_list\n",
+    "\n",
+    "\n",
+    "from pathlib import Path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Python3"
+   },
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "kernel": "Bash"
+    "kernel": "Python3"
    },
    "outputs": [],
    "source": []
@@ -494,6 +541,13 @@
      "calysto_bash",
      "Bash",
      "#E6EEFF",
+     ""
+    ],
+    [
+     "Python3",
+     "python3",
+     "Python3",
+     "#FFD91A",
      ""
     ],
     [
