name change pipeline

--- a/Analysis/Chicago_wgt_compute.ipynb
+++ b/Analysis/Chicago_wgt_compute.ipynb
@@ -392,7 +392,10 @@
     "colnames(to_fix)[5:ncol(to_fix)] = paste(\"NA\",colnames(to_fix)[5:ncol(to_fix)])%>%gsub(\" \",\"\",.)\n",
     "to_fix_chosen = to_fix[seq(1,13000,65),]%>%filter()\n",
     "to_fix_chosen%>%readr::write_tsv( path = \"/Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Chicago/Data/fastqtl_qqnorm_RNAseqGeuvadis_phase2_fixed_chosen.txt\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")\n",
-    "colnames(to_fix)\n"
+    "colnames(to_fix)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
