Add docker for software used #13

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -50,12 +50,12 @@
    },
    "source": [
     "## Pre-requisites\n",
-    "Make sure you install the following software before running this notebook:\n",
-    "- GCTA (gcta_1.93.2beta_mac)\n",
-    "- PLINK (plink_mac_20200616)\n",
-    "- GEMMA\n",
     "\n",
-    "Modified `Fusion.compute_weights.R` scripts can be found [in this github repo](https://github.com/cumc/neuro-twas/blob/master/Workflow/FUSION.compute_weights.R)."
+    "We provide a container image `docker://gaow/twas` that contains all software needed to run the pipeline. If you would like to configure it by yourself, please make sure you install the following software before running this notebook:\n",
+    "- GCTA\n",
+    "- PLINK\n",
+    "- GEMMA\n",
+    "- Modified `Fusion.compute_weights.R` scripts can be found [in this github repo](https://github.com/cumc/neuro-twas/blob/master/Workflow/FUSION.compute_weights.R)."
    ]
   },
   {
