complete code review draft

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -55,7 +55,10 @@
     "- GCTA\n",
     "- PLINK\n",
     "- GEMMA\n",
-    "- Modified `Fusion.compute_weights.R` scripts can be found [in this github repo](https://github.com/cumc/neuro-twas/blob/master/Workflow/FUSION.compute_weights.R)."
+    "- Modified `Fusion.compute_weights.R` scripts can be found [in this github repo](https://github.com/cumc/neuro-twas/blob/master/Workflow/FUSION.compute_weights.R).\n",
+    "- The original `FUSION.assoc_test.R` script can be found [in the author's github repo](https://github.com/gusevlab/fusion_twas).\n",
+    "\n",
+    "You need to make both `Fusion.compute_weights.R` and `FUSION.assoc_test.R` executable with `Rscript` command. See [this line]() for an example."
    ]
   },
   {
@@ -215,6 +218,8 @@
     "the genotypes file can be downloaded from the following link:\n",
     "https://data.broadinstitute.org/alkesgroup/FUSION/LDREF.tar.bz2\n",
     "\n",
+    "**FIXME: please upload the data to synapse.org and take it out of github. On github we don't store large datasets. Please ask me about account information for synapse.org**\n",
+    "\n",
     "The time it take to run this MWE shall be around 2 minutes. Pay extra attention to the gene_start and gene_end position  when using following command on gene_exp file that are not this MWE. Also, when there is too few or too many genes that passed the heritability check, consider increasing or decreasing the --window options. "
    ]
   },
@@ -229,8 +234,6 @@
     "## Test pipeline with test data\n",
     "\n",
     "sos run twas_fusion.ipynb \\\n",
-    "  --compute-weight-script  FUSION.compute_weights.R \\\n",
-    "  --assoc-test-script FUSION.assoc_test.R \\\n",
     "  --gwas-sumstat data/PGC2.SCZ.sumstats \\\n",
     "  --molecular-pheno data/GD462.hsq_succ.test_minimal.txt \\\n",
     "  --wd output \\\n",
@@ -331,17 +334,13 @@
    "outputs": [],
    "source": [
     "[global]\n",
-    "# Required: a customized fusion.compute_weight.mod.R script. The default script will not work\n",
-    "parameter: compute_weight_rscript = path\n",
-    "# The R script from fusion to conduct association test is required\n",
-    "parameter: assoc_test_rscript = path\n",
     "# Path to the input molecular phenotype data.\n",
     "parameter: molecular_pheno = path\n",
     "# Path to GWAS summary statistics data (association results between SNP and disease in a GWAS)\n",
     "parameter: gwas_sumstat = path\n",
     "# An index text file with two columns of chromosome and the corresponding PLINK bed file.\n",
     "parameter: genotype_list = path\n",
-    "# An index text file with one column specifying the names of regions to analyze\n",
+    "# An index text file with 4 columns specifying the chr, start, end and names of regions to analyze\n",
     "parameter: region_list = path\n",
     "# Path to the work directory: output files will be saved to this directory.\n",
     "parameter: wd = path('./')\n",
@@ -359,9 +358,26 @@
     "# Specify what model are used to compute weights.\n",
     "# Notice that `blsmm` can be very resource consuming.\n",
     "parameter: model = ['blsmm', 'blup' , 'lasso', 'top1', 'enet']\n",
-    "\n",
+    "# Container option for software to run the analysis: docker or singularity\n",
+    "parameter: container = 'gaow/twas'\n",
     "# Get regions of interest to focus on.\n",
-    "regions = [x.strip() for x in open(region_list).readlines() if x.strip()]"
+    "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip()]\n",
+    "geno_inventory = dict([x.strip().split() for x in open(genotype_list).readlines() if x.strip()])\n",
+    "\n",
+    "import os\n",
+    "def get_genotype_file(chrom, genotype_list, geno_inventory):\n",
+    "    if chrom.startswith('chr'):\n",
+    "        chrom = chrom[3:]\n",
+    "    if chrom not in geno_inventory:\n",
+    "        geno_file = geno_inventory['0']\n",
+    "    else:\n",
+    "        geno_file = geno_inventory[chrom]\n",
+    "    if not os.path.isfile(geno_file):\n",
+    "        # relative path\n",
+    "        if not os.path.isfile(f'{genotype_list:ad}/' + geno_file):\n",
+    "            raise ValueError(f\"Cannot find genotype file {geno_file}\")\n",
+    "        else:\n",
+    "            geno_file = f'{genotype_list:ad}/' + geno_file"
    ]
   },
   {
@@ -404,30 +420,59 @@
    "outputs": [],
    "source": [
     "# Preparing the analysis files by regions\n",
-    "[STEP_2]\n",
+    "[1]\n",
     "input: molecular_pheno, for_each = \"regions\"\n",
-    "output: f'{wd}/cache/{_input:nb}_per_gene/{_input:nb}.{_geneinfo[gene_name-1]}.txt',\n",
-    "        f'{wd}/tmp/{_input:nb}.{_geneinfo[gene_name-1]}.pheno'\n",
+    "...\n",
     "\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[1]:n}.stderr', stdout = f'{_output[1]:n}.stdout'\n",
-    "    cd $[wd]\n",
-    "    # Make sure every thing is alright\n",
-    "    echo $[_geneinfo[gene_name-1]]\n",
-    "    echo $[_geneinfo[gene_name-1]]\n",
-    "    echo $[_input]\n",
-    "    echo $[_output[0]]\n",
-    "    echo \"end of note\"\n",
-    "    touch $[_output[0]]\n",
-    "    touch $[_output[1]]\n",
-    "    # For every gene, extract the correspond expression levels\n",
-    "    grep $[_geneinfo[gene_name-1]] $[_input] > $[_output[0]:n].txt\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', workdir=wd\n",
+    "    # For every unit, extract the correspond expression levels\n",
+    "    # FIXME please use `awk` to only check for the column with `region_name` and extract the corresponding line \n",
+    "    # -- there is no point to grep for everything in the line\n",
+    "    # FIXME: this is very format specific?\n",
+    "\n",
+    "    grep -w $[_regions[3]] $[_input] |  tr '\\t' '\\n' | tail -n+5 > $[_output]\n",
     "    # Transpose the expression\n",
     "    cat $[_output[0]] | tr '\\t' '\\n' | tail -n+5 > $[_output[1]].tmp\n",
     "    # Check if the Patient name file are intact\n",
+    "    # FIXME: I'm missing PRE_GEXPID file\n",
     "    head -3 $[wd]/PRE_GEXPID\n",
     "    # Combined the expression and patient name to create phenotype\n",
     "    paste  $[wd]/PRE_GEXPID  $[wd]/PRE_GEXPID $[_output[1]].tmp > $[_output[1]:n].pheno\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "**Please see below outline of alternative implementation using R that ensures ID matching**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "R: expand = \"${ }\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', workdir=wd\n",
+    "    # Get the line number for the region in the file\n",
+    "    line_num = system(\"awk '($${region_name}==\\\"${_regions[3]}\\\") {print NR}' $[_input]\", intern=T)\n",
+    "    if length(line_num) == 0:\n",
+    "      stop(\"Cannot find ${_regions[3]} in column ${region_name}  ${_input}\")\n",
+    "    yi <- data.table::fread(file = ${_input:r}, skip = as.integer(line_num) - 1, nrows = 1)\n",
+    "    samplenames_yi <- data.table::fread(file = ${_input:r}, skip = 0, nrows = 1)\n",
+    "    colnames(yi) <- colnames(samplenames_yi)\n",
+    "    # FIXME: this -1:-5 is also hard-coded maybe we should make it a parameter option to drop a few columns before transpose\n",
+    "    yi <- yi[, -1:-5, drop = FALSE]\n",
+    "    yi <- t(as.matrix(yi))\n",
+    "    # FIXME: also load the sample name mapping file, and use `match` to properly match names \n",
+    "    # Please do not rely on default order. Please complete this section: load the sample ID match file directly. \n",
+    "    # I don't think at this point there needs to be a STEP_1\n",
+    "    ..."
    ]
   },
   {
@@ -438,30 +483,31 @@
    },
    "outputs": [],
    "source": [
-    "#Preparing the genotype file for each genes\n",
-    "[STEP_3]\n",
-    "input:  group_by = 2\n",
-    "        \n",
-    "output: f'{_input[1]:n}.bed',\n",
-    "        f'{_input[1]:n}.bim',\n",
-    "        f'{_input[1]:n}.fam'\n",
+    "# Preparing the genotype file for each genes\n",
+    "[2]\n",
     "\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',allow_error=True\n",
+    "# input comes in groups of 2 by default so there is no need to specify it\n",
+    "output: f'{_input:n}.bed',\n",
+    "        f'{_input:n}.bim',\n",
+    "        f'{_input:n}.fam'\n",
+    "# look up for genotype file first\n",
+    "chrom = regions[_index][0]\n",
+    "geno_file = get_genotype_file(chrom)\n",
+    "    \n",
+    "bash: container=container, expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', allow_error=True\n",
     "    ##### Get the locus genotypes for each samples\n",
-    "    #echo $[_input[1]:n]\n",
-    "    #echo $[_output[1]:n]\n",
-    "    # Chromosomes, gene names, and start and end side are acquired by the snippet to avoid \n",
-    "    $[PLINK] --bfile $[genotype_file_directory]/$[genotype_prefix].`cat $[_input[0]] | awk '{ print $$[chrom] }'` \\\n",
-    "    --pheno $[_input[1]] \\\n",
+    "    $[PLINK] --bfile $[geno_file] \\\n",
+    "    --pheno $[_input] \\\n",
     "    --make-bed \\\n",
-    "    --out $[_output[1]:n] \\\n",
-    "    --chr `cat $[_input[0]] | awk '{ print $$[chrom] }'` \\\n",
-    "    --from-bp `cat $[_input[0]] | awk '{ print $$[gene_start] - $[window] }'` \\\n",
-    "    --to-bp `cat $[_input[0]] | awk '{ print $$[gene_end] + $[window] }'` \\\n",
+    "    --out $[_output[0]:n] \\\n",
+    "    --chr ${chrom} \\\n",
+    "    --from-bp $[_regions[1] - window * 1000] \\\n",
+    "    --to-bp $[_regions[2] + window * 1000] \\\n",
+    "    # FIXME: sorry I dont understand why we need this argument\n",
     "    --extract $[genotype_file_directory]/$[genotype_prefix].`cat $[_input[0]] | awk '{ print $$[chrom] }'`.bim \\\n",
     "    --keep $[_input[1]] \\\n",
     "    --allow-no-sex\n",
-    "    touch $[_input[1]:n].bed $[_input[1]:n].bim $[_input[1]:n].fam"
+    "    touch $[_output] # this will touch all files in output"
    ]
   },
   {
@@ -471,50 +517,30 @@
     "kernel": "SoS"
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to process step output (f'{wd}/WEIGHTS/{_input[0]:bn}.wgt.RDat'): name 'wd' is not defined\n"
-     ]
-    }
-   ],
    "source": [
     "#Actual weight computation \n",
-    "[STEP_4]\n",
-    "import os\n",
-    "input: group_by = 3\n",
+    "[3]\n",
     "output: f'{wd}/WEIGHTS/{_input[0]:bn}.wgt.RDat'\n",
+    "\n",
+    "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "\n",
-    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', active = (os.path.getsize(f'{_input[0]}') != 0)\n",
-    "    cd $[wd]\n",
-    "    Rscript $[compute_weight_rscp] \\\n",
-    "    --bfile $[_input[1]:n] \\\n",
-    "    --tmp $[_input[1]:n].tmp \\\n",
-    "    --out ./WEIGHTS/$[_output[0]:bnn] \\\n",
+    "bash: container=container, expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', active = (os.path.getsize(f'{_input[0]}') != 0)\n",
+    "    FUSION.compute_weights.R \\\n",
+    "    --bfile $[_input[0]:n] \\\n",
+    "    --tmp $[_input[0]:n].tmp \\\n",
+    "    --out $[_output[0]:bnn] \\\n",
     "    --verbose 0 \\\n",
     "    --save_hsq \\\n",
+    "    # FIXME : do we still need these options if GCTA and GEMMA have been installed already?\n",
     "    --PATH_gcta $[GCTA] \\\n",
     "    --PATH_gemma $[GEMMA] \\\n",
-    "    --models $[model]\n",
-    "    ## blsmm model will take up too many time and therefore is not comment out in the testing period.\n",
-    "    \n",
-    "    \n",
+    "    --models $[\",\".join(model)]   \n",
     "    ## Creat dummy output file that will be deleted next step\n",
     "    touch $[_output[0]]\n",
     "    ## Append heritability output to hsq file\n",
-    "    cat ./WEIGHTS/$[_output[0]:bnn].hsq >> All_passed_gene.hsq\n",
-    "    echo \"end of circle\""
+    "    # FIXME: this is wrong please delete. I'll explain why in person\n",
+    "    # cat ./WEIGHTS/$[_output[0]:bnn].hsq >> All_passed_gene.hsq"
    ]
   },
   {
@@ -526,18 +552,20 @@
    "outputs": [],
    "source": [
     "#Create wgt.Rdat map for Assoc_testing\n",
-    "[STEP_5]\n",
+    "[4]\n",
     "import os\n",
-    "input: group_by = 1\n",
-    "skip_if(os.path.getsize(f'{_input}') == 0)\n",
+    "# FIXME: please use group_by = 'all' here, to organize your hsq file and the position file\n",
+    "input: group_by = 'all'\n",
     "\n",
-    "bash: expand= \"$[ ]\"\n",
-    "    cd $[wd]\n",
+    "bash: expand= \"$[ ]\", workdir = wd\n",
+    "    # FIXME: line below is moved from your original STEP_1\n",
+    "    echo -e \"WGT\\tID\\tCHR\\tP0\\tP1\" > $[_output[0]]\n",
+    "    # FIXME: Why don't we use `cut -f `? \n",
     "    echo $[_input:b] \\\n",
     "    `awk '{ print $$[gene_name] }' $[wd]/$[_input:bnnnn]_per_gene/$[_input:bnn].txt` \\\n",
     "    `awk '{ print $$[chrom] }' $[wd]/$[_input:bnnnn]_per_gene/$[_input:bnn].txt` \\\n",
     "    `awk '{ print $$[gene_start] - $[window] }' $[wd]/$[_input:bnnnn]_per_gene/$[_input:bnn].txt` \\\n",
-    "    `awk '{ print $$[gene_end] + $[window] }' $[wd]/$[_input:bnnnn]_per_gene/$[_input:bnn].txt` >> $[_input:nnnn].pos\n"
+    "    `awk '{ print $$[gene_end] + $[window] }' $[wd]/$[_input:bnnnn]_per_gene/$[_input:bnn].txt` >> $[_output].pos\n"
    ]
   },
   {
@@ -549,36 +577,31 @@
    "outputs": [],
    "source": [
     "# Association test\n",
-    "[STEP_6,AssocTest]\n",
-    "from pathlib import Path\n",
-    "pos = list(set([tuple(x.strip().split()) for x in open(f'{wd}/WEIGHTS/{Path(gene_exp_file).stem}.pos').readlines()[1:] if x.strip()]))\n",
-    "chrom_list = list(set([item[2] for item in pos]))\n",
-    "chrom_list\n",
+    "[assoc_test]\n",
+    "# FIXME: \n",
+    "depends: '...pos'\n",
     "\n",
-    "input: sumstat_file,for_each = \"chrom_list\"\n",
+    "\n",
+    "#from pathlib import Path\n",
+    "#pos = list(set([tuple(x.strip().split()) for x in open(f'{wd}/WEIGHTS/{Path(gene_exp_file).stem}.pos').readlines()[1:] if x.strip()]))\n",
+    "#chrom_list = list(set([item[2] for item in pos]))\n",
+    "#chrom_list\n",
+    "# FIXME: let's use this for chrom_list? \n",
+    "chrom_list = get_output(f'cut -f 3 {_input} | tail -n+1 | uniq').strip().split()\n",
+    "\n",
+    "input: sumstat_file, for_each = \"chrom_list\"\n",
     "output:f'{assoc_test_result}/{gene_exp_file:bn}_{_chrom_list}.dat'\n",
     "\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout'\n",
-    "    echo $[_chrom_list]\n",
-    "    echo $[wd]/WEIGHTS/\n",
-    "    echo 'Rscript $[assoc_test_rscp] \\\n",
+    "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
+    "\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', workdir = f'{wd}/WEIGHTS/'\n",
+    "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights ./$[gene_exp_file:bn].pos \\\n",
     "    --weights_dir ./ \\\n",
-    "    --ref_ld_chr $[genotype_file_directory]/$[genotype_prefix]. \\\n",
+    "    --ref_ld_chr $[geno_file]. \\\n",
     "    --chr $[_chrom_list] \\\n",
-    "    --out $[_output] '\n",
-    "    \n",
-    "    cd $[wd]/WEIGHTS/\n",
-    "    Rscript $[assoc_test_rscp] \\\n",
-    "    --sumstats $[_input] \\\n",
-    "    --weights ./$[gene_exp_file:bn].pos \\\n",
-    "    --weights_dir ./ \\\n",
-    "    --ref_ld_chr $[genotype_file_directory]/$[genotype_prefix]. \\\n",
-    "    --chr $[_chrom_list] \\\n",
-    "    --out $[_output]\n",
-    "    \n",
-    "\n"
+    "    --out $[_output]"
    ]
   },
   {
@@ -610,66 +633,8 @@
     "    rm `find ./tmp/*.fam -size 0`\n",
     "    rm `find ./tmp/*.bed -size 0`\n",
     "    find ./WEIGHTS/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
-    "    rm `find ./WEIGHTS/*.wgt.RDat -size 0`\n",
-    "    "
+    "    rm `find ./WEIGHTS/*.wgt.RDat -size 0`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "Bash"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "kernel": "Bash"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restarting kernel \"Bash\"\n",
-      "/Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/twas-dev/Workflow\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "Bash"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
